stylus/list.styl
.content li, html:not(.studynotes) li
  margin-bottom: 0.75em

ul, ol
  margin: 0 0 1.5em 2em
  padding: 0

  // No left margin on outermost list
  :not(li) > &
    margin-left: 0

  ul, ol
    margin-top: 0.75em
    margin-bottom: 0.75em

  &.tight
    margin-left: 0
    li
      ellipsis()

  &.more
    li
      ellipsis()
    a:visited
      color: BLUE_LIGHT

  &.listing
    font-weight: bold
    list-style: none
    margin-left: 0

    li
      background: #EEE
      color: GRAY_DARKEST
      ellipsis()
      padding: 10px 25px
      margin-bottom: 0

    li:nth-child(even)
      background: #FFF

  li small
    line-height: 0

ul
  li
    list-style-position: inside

// APA-style lists
ol
  counter-reset: level1

  li
    list-style: none

  li:before
    content: counter(level1, upper-alpha) ". "
    counter-increment: level1
    font-weight: bold

  ol
    counter-reset: level2
    li:before
      content: counter(level2, decimal) ". "
      counter-increment: level2

    ol
      counter-reset: level3
      li:before
        content: counter(level3, lower-alpha) ". "
        counter-increment: level3

      ol
        counter-reset: level4
        li:before
          content: counter(level4, lower-roman) ". "
          counter-increment: level4

        ol
          counter-reset: level5
          li:before
            content: "(" counter(level5, decimal) ") "
            counter-increment: level5

.entry
  margin-bottom: 1.5em

  .heading
    width: 100%

    h3
      float: left

    .author, .collegeLogo
      float: right
      position: relative
      top: -5px

      a
        {LINK}
          color: GRAY_DARKEST
        {HOVER}
          color: BLUE_DARK

      span
        float: left
        margin-top: 7px

      img
        float: right
        height: 40px
        margin: 0 0 0 10px
        width: 40px

    .author img
      border-radius: 20px
      box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.35)

  .body
    clear: left

    .read-more
      margin-left: 5px

  p
    display: inline
    margin-right: 5px

ul.bigList
  margin-left: 0

  li
    ellipsis()
    list-style: none
    &:last-child a
      margin-bottom: 0

  a
    heading_font()
    background-color: #607D8B
    border-radius: 5px
    display: block
    font-size: 1.2em
    height: 80px
    margin-bottom: 15px
    padding: 28px 0 0 20px

    @media PHONE
      font-size: 1.4em
    @media TABLET_TIGHT
      font-size: 1.3em

    {LINK}
      color: #FFF
    {HOVER}
      text-decoration: none
      -webkit-filter: brightness(1.2)
      filter: brightness(1.2)

  i
    float: right
    display: none
    @media PHONE
      display: inline

  // Google Material Design Colors
  .english
    background: #FF9800 url('https://cdn.apstudynotes.org/images/list/english.svg') no-repeat
    background-size: auto 70px
    background-position: top 10px right 20px
    @media PHONE
      background-position: top 10px right 40px
  .european-history
    background: #00BCD4 url('https://cdn.apstudynotes.org/images/list/european-history.svg') no-repeat
    background-size: auto 69px
    background-position: top 10px right 20px
    @media PHONE
      background-position: top 10px right 40px
  .microeconomics
    background: #4CAF50 url('https://cdn.apstudynotes.org/images/list/microeconomics.svg') no-repeat
    background-size: auto 72px
    background-position: top 10px right 20px
    @media PHONE
      background-position: top 10px right 30px
  .psychology
    background: #E91E63 url('https://cdn.apstudynotes.org/images/list/psychology.svg') no-repeat
    background-size: auto 70px
    background-position: top 10px right 20px
    @media PHONE
      background-position: top 10px right 40px
  .us-government
    background: #F44336 url('https://cdn.apstudynotes.org/images/list/us-government.svg') no-repeat
    background-size: auto 70px
    background-position: top 10px right 20px
    @media PHONE
      background-position: top 10px right 40px
  .us-history
    background: #3F51B5 url('https://cdn.apstudynotes.org/images/list/us-history.svg') no-repeat
    background-size: auto 70px
    background-position: top 10px right -5px
    @media PHONE
      background-position: top 10px right 10px
  .world-history
    background: #FF5722 url('https://cdn.apstudynotes.org/images/list/world-history.svg') no-repeat
    background-size: auto 72px
    background-position: top 10px right 20px
    @media PHONE
      background-position: top 10px right 40px

